syntax = "proto3";

package mirero.daq.domain.workflow.protos.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "daq_common.proto";

option csharp_namespace = "Mirero.DAQ.Domain.Workflow.Protos.V1";

service JobService {
	// BatchJob
	rpc ListBatchJobs(ListBatchJobsRequest) returns (ListBatchJobsResponse) {} //where status = cancel orderby registered date
	rpc CreateBatchJob(CreateBatchJobRequest) returns (BatchJob) {}
	rpc StartJob(stream StartJobRequest) returns (google.protobuf.Empty) {}
	rpc CancelBatchJob(CancelBatchJobRequest) returns (google.protobuf.Empty) {}
	rpc WaitBatchJob(WaitBatchJobRequest) returns (stream WaitBatchJobResponse) {}
	rpc DeleteBatchJob(DeleteBatchJobRequest) returns (google.protobuf.Empty) {}
	rpc MonitoringBatchJobs(stream MonitoringBatchJobsRequest) returns (MonitoringBatchJobsResponse) {}

	// Job
	rpc ListJobs(ListJobsRequest) returns (ListJobsResponse) {}
	rpc CancelJob(CancelJobRequest) returns (google.protobuf.Empty) {}
}

// BatchJob
message BatchJob {
	string id = 1;
	string title = 2;
	string workflow_type = 3;
	int32 total_count = 4;
	string status = 5;
	google.protobuf.Timestamp register_date = 6;
	google.protobuf.Timestamp start_date = 7;
	google.protobuf.Timestamp end_date = 8;
	string register_user = 9;
	google.protobuf.StringValue properties = 10;
	google.protobuf.StringValue description = 11;
}

message ListBatchJobsRequest {
	mirero.daq.domain.common.protos.QueryParameter query_parameter = 1;
}

message ListBatchJobsResponse {
	mirero.daq.domain.common.protos.PageResult page_result = 1;
	repeated BatchJob batch_jobs = 2;
}

message CreateBatchJobRequest {
	 string id = 1;
	 string title = 2;
	 string workflow_type = 3;
	 int32 total_count = 4;
	 google.protobuf.StringValue properties = 5;
	 google.protobuf.StringValue description = 6;
}

message StartJobRequest {
	string batch_job_id = 1;
	string job_id = 2;
	int64 workflow_version_id = 3;
	string job_type = 4;
	bytes parameter = 5;
	int32 time_out = 6;
}

message CancelBatchJobRequest {
	string batch_job_id = 1;
}

message WaitBatchJobRequest {
	string batch_job_id = 1;
}

message WaitBatchJobResponse {
	string batch_job_id = 1;
	string status = 2;
}

message DeleteBatchJobRequest {
	string batch_job_id = 1;
}

message MonitoringBatchJobsRequest 
{
	repeated string batch_job_ids = 1;
}

message MonitoringBatchJob
{
	string batch_job_id = 1;
	int32 end_count = 2;
	string status = 3;
}

message MonitoringBatchJobsResponse {
	repeated MonitoringBatchJob monitoring_batch_jobs = 1;
}

// Job
message Job {
	string id = 1;
	string batch_job_id = 2;
	string worker_id = 3;
	string type = 4;
	int64 workflow_version_id = 5;
	string status = 6;
	google.protobuf.Timestamp register_date = 7;
	google.protobuf.Timestamp start_date = 8;
	google.protobuf.Timestamp end_date = 9;
	bytes parameter = 10;
}

message ListJobsRequest {
	mirero.daq.domain.common.protos.QueryParameter query_parameter = 1;
	string batch_job_id = 2;
}

message ListJobsResponse {
	mirero.daq.domain.common.protos.PageResult page_result = 1;
	repeated Job jobs = 2;
	bool isCompleted = 3; 
}

message CancelJobRequest {
    string batch_job_id = 1;
	string job_id = 2;
}